added hero and news sections

--- a/index.html
+++ b/index.html
@@ -41,6 +41,24 @@
           <button>SIŲSTI SIUNTĄ</button>
         </div>
       </div>
+      <main>
+        <section class="hero"></section>
+        <section class="news">
+          <h2>Naujienos</h2>
+          <div class="cards">
+            <div class="card">
+              <div class="card-image">
+                <img src="card.jpg" alt="postal card" />
+              </div>
+              <p class="card-text">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Consequuntur, quo!
+              </p>
+              <a href="#">Plačiau ></a>
+            </div>
+          </div>
+        </section>
+      </main>
     </header>
   </body>
 </html>
