added o mone card ant styled cards

--- a/index.html
+++ b/index.html
@@ -56,6 +56,16 @@
               </p>
               <a href="#">Plačiau ></a>
             </div>
+            <div class="card">
+              <div class="card-image">
+                <img src="card.jpg" alt="postal card" />
+              </div>
+              <p class="card-text">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Consequuntur, quo!
+              </p>
+              <a href="#">Plačiau ></a>
+            </div>
           </div>
         </section>
       </main>
