added footer and social icons

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,400&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <header>
@@ -41,34 +45,115 @@
           <button>SIŲSTI SIUNTĄ</button>
         </div>
       </div>
-      <main>
-        <section class="hero"></section>
-        <section class="news">
-          <h2>Naujienos</h2>
-          <div class="cards">
-            <div class="card">
-              <div class="card-image">
-                <img src="card.jpg" alt="postal card" />
-              </div>
-              <p class="card-text">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Consequuntur, quo!
-              </p>
-              <a href="#">Plačiau ></a>
-            </div>
-            <div class="card">
-              <div class="card-image">
-                <img src="card.jpg" alt="postal card" />
-              </div>
-              <p class="card-text">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Consequuntur, quo!
-              </p>
-              <a href="#">Plačiau ></a>
-            </div>
-          </div>
-        </section>
-      </main>
     </header>
+    <main>
+      <section class="hero"></section>
+      <section class="news">
+        <h2>Naujienos</h2>
+        <div class="cards">
+          <div class="card">
+            <div class="card-image">
+              <img src="card.jpg" alt="postal card" />
+            </div>
+            <p class="card-text">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Consequuntur, quo!
+            </p>
+            <a href="#">Plačiau ></a>
+          </div>
+          <div class="card">
+            <div class="card-image">
+              <img src="card.jpg" alt="postal card" />
+            </div>
+            <p class="card-text">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Consequuntur, quo!
+            </p>
+            <a href="#">Plačiau ></a>
+          </div>
+          <div class="card mini">
+            <div class="card-image">
+              <img src="card.jpg" alt="postal card" />
+            </div>
+            <p class="card-text">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Consequuntur, quo!
+            </p>
+            <a href="#">Plačiau ></a>
+          </div>
+          <div class="card mini">
+            <div class="card-image">
+              <img src="card.jpg" alt="postal card" />
+            </div>
+            <p class="card-text">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Consequuntur, quo!
+            </p>
+            <a href="#">Plačiau ></a>
+          </div>
+          <div class="card mini">
+            <div class="card-image">
+              <img src="card.jpg" alt="postal card" />
+            </div>
+            <p class="card-text">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Consequuntur, quo!
+            </p>
+            <a href="#">Plačiau ></a>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <nav class="footer-navigation">
+        <div class="nav">
+          <h3>Įrankiai</h3>
+          <un>
+            <li><a href="#">Siuntų sekimas</a></li>
+            <li><a href="#">Siuntų sekimas</a></li>
+            <li><a href="#">Siuntų sekimas</a></li>
+            <li><a href="#">Siuntų sekimas</a></li>
+            <li><a href="#">Siuntų sekimas</a></li>
+          </un>
+        </div>
+        <div class="nav">
+          <h3>Pagalba</h3>
+          <un>
+            <li><a href="#">Siuntų sekimas</a></li>
+            <li><a href="#">Siuntų sekimas</a></li>
+            <li><a href="#">Siuntų sekimas</a></li>
+          </un>
+        </div>
+        <div class="nav">
+          <h3>Paslaugos</h3>
+          <un>
+            <li><a href="#">Siuntų sekimas</a></li>
+            <li><a href="#">Siuntų sekimas</a></li>
+            <li><a href="#">Siuntų sekimas</a></li>
+            <li><a href="#">Siuntų sekimas</a></li>
+            <li><a href="#">Siuntų sekimas</a></li>
+            <li><a href="#">Siuntų sekimas</a></li>
+            <li><a href="#">Siuntų sekimas</a></li>
+            <li><a href="#">Siuntų sekimas</a></li>
+          </un>
+        </div>
+        <div class="nav">
+          <h3>Lietuvos paštas</h3>
+          <un>
+            <li><a href="#">Siuntų sekimas</a></li>
+            <li><a href="#">Siuntų sekimas</a></li>
+            <li><a href="#">Siuntų sekimas</a></li>
+            <li><a href="#">Siuntų sekimas</a></li>
+            <li><a href="#">Siuntų sekimas</a></li>
+            <li><a href="#">Siuntų sekimas</a></li>
+          </un>
+        </div>
+      </nav>
+      <div class="social">
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-instagram"></a>
+        <a href="#" class="fa fa-twitter"></a>
+      </div>
+    </footer>
   </body>
 </html>
